--- a/document/latex/after_body.tex
+++ b/document/latex/after_body.tex
@@ -1,4 +1,16 @@
 \backmatter
+\chapter{Appendices}
+
+\thispagestyle{empty}
+\begin{center}
+\includegraphics{karpinskipermission.png}
+\end{center}
+
+\thispagestyle{empty}
+\begin{center}
+\includegraphics{cownpermission.png}
+\end{center}
+
 \chapter{Vita}
 
 David John Baker is a music researcher and educator passionate about questions at the intersection of music theory and music science.
