--- a/document/latex/before_body.tex
+++ b/document/latex/before_body.tex
@@ -21,11 +21,8 @@ MSc., Goldsmiths, University of London, 2015\\
 May 2019
 \end{center}
 
-
 \setlength{\abovedisplayskip}{-5pt}
 \setlength{\abovedisplayshortskip}{-5pt}
-
-
 
 \cleardoublepage\newpage\thispagestyle{empty}\null
 \cleardoublepage\newpage\thispagestyle{empty}\null
@@ -58,22 +55,15 @@ As a result, you've opened my eyes to the world.
 
 This dissertation would not have been possible without the support of a large community people over the past four years.
 First and foremost, I would like to acknowledge and thank my dissertation committee.
-Daniel Shanahan, my main supervisor throughout my doctoral work, who provided countless office conversations and cups of coffee at Highland-- but more importantly-- encouraged me to pursue my reserach interests at the intersection of music theory and music perception; Emily Elliott, for the unmatched support and guidence; and Robert Peck, for the constant reminder and inspiration that research with music and math can always go together.
+Daniel Shanahan, my main supervisor throughout my doctoral work, who provided countless office conversations and cups of coffee at Highland-- but more importantly-- encouraged me to pursue my research interests at the intersection of music theory and music perception; Emily Elliott, for your unmatched support and guidance; and Robert Peck, for being living proof that research with music and numbers can always go together.
 
-Secondly, I want to thank the entire Louisiana State University community for always making me feel welcomed, supported.
+Secondly, I want to thank the entire Louisiana State University community for making me feel welcomed and supported.
 The people make the place and everyone I met during my time in Baton Rouge existed as a constant source of knowledge and inspiration throughout my time as a student.
-This includes the Music Cognition and Computation Lab at LSU, the weekly Tin Roof Trivia group, and professors like Jason Harman who opened the door for me every time I knocked.
+This includes the Music Cognition and Computation Lab at LSU, the weekly Tin Roof Trivia group, and professors like Jason Harman  who opened the door for me every time I knocked.
 
 Thirdly, I want to especially thank those who either went out of their way to help me learn the more technical aspects of research who often go unacknowledged.
-Craig Sapp, for dealing with me as I learned about Humdrum, Yihui Xie writing the bookdown software I used to write this dissertation, the \#rstats community, specifically Hadely Wickahm, for creating the tidyverse, and Daniel Müllensiefen for starting me on my journey into programming.
-Without a committment to free and open source software, this research and dissertation would not have been possible.
-
-Fourthly, I want to thank for all the social support from people I befriended the past few years.
-This includes everyone I met through the Music, Mind and Brain group in London, particularly Peter Harrison for always offering help with software and being sounding board for ideas, as well as Marus Pearce and the rest of the Queen Mary Music Cognition group for letting me sit in on lab meetings while a writing up my PhD in London.
-
-Fifth, I want to thank everyone I have known from Ohio.
-Without getting too teleological, I don't know if I would have ended up on this path without support of friends and professors who listened to what I wanted to do.
-A special thank you goes to Christine Dorey, who suggested I email David Huron to learn what music psychology was all about, which resulted in a 90 minute phone call that carved out the career plan I've been following the past six years.
+Craig Sapp, for dealing with me as I learned about Humdrum, Yihui Xie for writing the bookdown software I used to write this dissertation, the \#rstats community, specifically Hadley Wickham, for making R so accessible, and Daniel Müllensiefen for starting me on my journey into programming.
+Without a commitment to free and open source software, this research and dissertation would not have been possible.
 
 Lastly, I want to thank all of my friends and family.
-Thank you to Will, Rory, Kevin, Amanda, Ryan, Chris, Kris, Sarah, Phil (also for the melodies!), Owen, Jacob, Michael, Adam, Mark, Sasha, Connor, Elizabeth, Tony, Andrew, Savanna, Jared, Matt, Lauryn, Erin, Lizbeth, Greg, my parents John and Mary, and Evelyn for your support, companionship, love, and always keeping me sane.
+Thank you to Will, Rory, Kevin, Amanda, Ryan, Chris, Peter, Jono, Kris, Sarah, Phil (also for the melodies!), Owen, Jacob, Michael, Adam, Mark, Sasha, Lauryn, Connor, Elizabeth, Tanush, Tony, Andrew, Anthony, Savanna, Jared, Matt, Andrew, Erin, Lizbeth, Greg, my parents John and Mary, and especially Evelyn for all your support and love.
